@@ -240,10 +240,16 @@ class Database(FileStorage, hyperdb.Database, roundupdb.Database):
             if not row: break
             yield row
 
-    def sql_stringquote(self, value):
-        """ Quote the string so it's safe to put in the 'sql quotes'
+    def search_stringquote(self, value):
+        """ Quote a search string to escape magic search characters
+            '%' and '_', also need to quote '\' (first)
+            Then put '%' around resulting string for LIKE (or ILIKE) operator
         """
-        return re.sub("'", "''", str(value))
+        v = value.replace('\\', '\\\\')
+        v = v.replace('%', '\\%')
+        v = v.replace('_', '\\_')
+        return '%' + v + '%'
+
 
     def init_dbschema(self):
         self.database_schema = {
@@ -1463,6 +1469,10 @@ class Class(hyperdb.Class):
         All methods except __repr__ and getnode must be implemented by a
         concrete backend Class.
     """
+    # For many databases the LIKE operator ignores case.
+    # Postgres and Oracle have an ILIKE operator to support this.
+    # We define the default here, can be changed in derivative class
+    case_insensitive_like = 'LIKE'
 
     def schema(self):
         """ A dumpable version of the schema that we can store in the
@@ -2433,23 +2443,24 @@ class Class(hyperdb.Class):
                     if not isinstance(v, type([])):
                         v = [v]
 
-                    # Quote the bits in the string that need it and then embed
-                    # in a "substring" search. Note - need to quote the '%' so
-                    # they make it through the python layer happily
-                    v = ['%%'+self.db.sql_stringquote(s)+'%%' for s in v]
+                    # Quote special search characters '%' and '_' for
+                    # correct matching with LIKE/ILIKE
+                    # Note that we now pass the elements of v as query
+                    # arguments and don't interpolate the quoted string
+                    # into the sql statement. Should be safer.
+                    v = [self.db.search_stringquote(s) for s in v]
 
                     # now add to the where clause
                     where.append('('
-                        +' and '.join(["_%s._%s %s '%s'"%(
+                        +' and '.join(["_%s._%s %s %s ESCAPE %s"%(
                                     pln,
                                     k,
-                                    # For many databases the LIKE operator
-                                    # ignores case.  Postgres and Oracle have
-                                    # an ILIKE operator to support this.
-                                    getattr(self,'case_insensitive_like','LIKE'),
-                                    s) for s in v])
+                                    self.case_insensitive_like,
+                                    a,
+                                    a) for s in v])
                         +')')
-                    # note: args are embedded in the query string now
+                    for vv in v:
+                        args.extend((vv, '\\'))
                 if 'sort' in p.need_for:
                     oc = ac = 'lower(_%s._%s)'%(pln, k)
             elif isinstance(propclass, Link):
